[compiler] filemanager: major updates/improvements (URLFileManager, JarFileManager, DirFileManager, ClassPathFileManager); moved FileObject implementations to ...filemanager.foimpl package {{5hrs}}